# shamir

./: CMakeLists.txt  README.md  main.cpp
include/: BigInteger.h  ModularMath.h  Random.h
sources/: BigUnsigned.cpp  ModularMath.cpp  Random.cpp
testing/: shamir
